sdk_tests/tests/pbc_contract_codegen/fail/shortname_bad_too_long.stderr
error: custom attribute panicked
 --> tests/pbc_contract_codegen/fail/shortname_bad_too_long.rs:7:1
  |
7 | #[action(shortname = 0x99AABBCCEEFF55)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid shortname, should be LEB128 encoded: "Shortname value too large for u32"
